<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".dataProfileFunction.ProfileActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAFFFFFF"/>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.8"
        android:backgroundTint="#55A2C1"
        android:onClick="logout"
        android:text="@string/Logout"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeProfile"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/profileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/YourName"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/YourEmailAddress"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/FullName"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Email"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/baseline_person_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName"
        app:srcCompat="@drawable/baseline_attach_email_24" />

    <Button
        android:id="@+id/changeProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.8"
        android:backgroundTint="#55A2C1"
        android:text="@string/ChangeProfile"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:layout_marginTop="105dp"
        android:backgroundTint="#00D52020"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:text="@string/Home"
        android:textColor="#55A2C1"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_marginTop="105dp"
        android:backgroundTint="#00D52020"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:text="@string/Search"
        android:textColor="#55A2C1"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/userListButton"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

    <Button
        android:id="@+id/userListButton"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginTop="105dp"
        android:backgroundTint="#00D52020"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:text="@string/Friends"
        android:textColor="#55A2C1"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

    <Button
        android:id="@+id/profile"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_marginTop="105dp"
        android:backgroundTint="#00D52020"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:text="@string/Profile"
        android:textColor="#237BC1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/data"
        app:layout_constraintStart_toEndOf="@+id/userListButton"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

    <Button
        android:id="@+id/data"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:layout_marginTop="105dp"
        android:backgroundTint="#00D52020"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:text="@string/Data"
        android:textColor="#55A2C1"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

    <Button
        android:id="@+id/btn_profile_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.8"
        android:backgroundTint="#55A2C1"
        android:text="@string/btn_profile_following"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonReset" />

</androidx.constraintlayout.widget.ConstraintLayout>