<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadActivity">

    <View
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#55A2C1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-108dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/post"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintEnd_toEndOf="@+id/topBar"
        app:layout_constraintStart_toStartOf="@+id/text"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/refresh"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintEnd_toStartOf="@+id/text"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What's New?"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/topBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/loadData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Home"
        android:textColor="#237BC1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadData" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Search"
        android:textColor="#55A2C1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/userListButton"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toBottomOf="@+id/loadData" />

    <Button
        android:id="@+id/userListButton"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Friends"
        android:textColor="#55A2C1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/profile"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/loadData" />

    <Button
        android:id="@+id/profile"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Profile"
        android:textColor="#55A2C1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/data"
        app:layout_constraintStart_toEndOf="@+id/userListButton"
        app:layout_constraintTop_toBottomOf="@+id/loadData" />

    <Button
        android:id="@+id/data"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Data"
        android:textColor="#55A2C1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/loadData" />


</androidx.constraintlayout.widget.ConstraintLayout>

