<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#55A2C1"
    tools:context=".UserListActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select User"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageBack"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBack">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/usersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:padding="@dimen/_20sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/textErrorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />

    </FrameLayout>

    <Button
        android:id="@+id/homeButton"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Home"
        android:textColor="#237BC1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Search"
        android:textColor="#237BC1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/userListButton"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/userListButton"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Friends"
        android:textColor="#AADFF4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/profileB"
        app:layout_constraintStart_toEndOf="@+id/searchButton"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/profileB"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Profile"
        android:textColor="#237BC1"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/data"
        app:layout_constraintStart_toEndOf="@+id/userListButton"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/data"
        android:layout_width="78dp"
        android:layout_height="37dp"
        android:backgroundTint="#00D52020"
        android:padding="2dp"
        android:text="@string/Data"
        android:textColor="#237BC1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileB"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>